Change Log

perdition
Mail retrieval proxy server
Copyright (C) 1999-2002  Horms <horms@vergenet.net>
----------------------------------------------------------------------

30th April 2002
(Horms)

  * Version 0.1.10beta3
  - Uninstall symlinks created by -hook targets in various Makefile.am
  - Handle the return of an empty string from db_getserver routines
  - Minor changes to ldap module to use ldap_init as ldap_open
    is depreciated and to warn about multiple entries being
    returned. Eric <edk@ypass.net>
  - A child process, or process handling an inetd connection
    will exit on reciept of a SIG PIPE.
  - Document that if no_lookup is used then popmaps must
    not contain hostnames
  - Better logging of SSL I/O problems
  - Fixed handling of empty tags
  - Log an error and exit if TLS support is requested, as it isn't
    supported yet.
  - ldap module: If nothing resembling a servername is returned then
    the search has failed. Previously a useless entry with
    no servername was returned.
  - Up dated .spec file and init script to work against Red Hat 7.1
  - ldap module:  If supported, set the network timeout to 10 seconds
    Roland Rosenfeld <roland@spinnaker.de>


----------------------------------------------------------------------

19th April 2002
(Horms)

  * Version 0.1.10beta2
  - Better loging of problems when connecting to real-servers
  - Debian init scripts and packaging updated.
  - Added LDAP schema, perdition.schema
    This uses the Private Enteprise Number 12856, which belongs
    to Verge Networks, which intern belongs to the author Horms
  - -X is no longer a synonym for --lower_case
  - Addded POP3S and IMAP4S protocol labels
  - Updated signal handlers to reflect changes in libvanessa_socket
  - Change UID and GID before forking rather than after
  - Change process title at different stages of a perdition processes 
    life
  - Added ODBC perditondb module
  - Added query keys.


