@@ -5,6 +5,17 @@ Mail retrieval proxy server
 Copyright (C) 1999-2002  Horms <horms@vergenet.net>
 ----------------------------------------------------------------------
 
+XXX
+(Horms)
+
+  * XXX
+  - Flush internal buffers for tokenizer when swiching between
+    the client and the real server in unauthenticated mode.
+    This resolves a problem with IMAP literal strings not working.
+
+
+----------------------------------------------------------------------
+
 30th April 2002
 (Horms)
 
